--- a/motionlayout-start/app/src/main/res/layout/activity_step3.xml
+++ b/motionlayout-start/app/src/main/res/layout/activity_step3.xml
@@ -19,7 +19,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutDescription="@xml/step3" >
+        app:layoutDescription="@xml/step3"
+    app:motionDebug="SHOW_PATH">
 
 
     <ImageView
