--- a/motionlayout-start/app/src/main/res/xml/step5.xml
+++ b/motionlayout-start/app/src/main/res/xml/step5.xml
@@ -48,8 +48,19 @@
                     app:percentY="0.6"
             />
 
-            <!-- TODO: Add KeyAttributes to rotate and resize @id/moon -->
+            <KeyAttribute
+                app:framePosition="100"
+                app:motionTarget="@id/moon"
+                android:rotation="-720"
+                />
 
+            <KeyAttribute
+                app:framePosition="50"
+                app:motionTarget="@id/moon"
+                android:scaleY="2.0"
+                android:scaleX="2.0"
+                android:rotation="-360"
+                />
 
             <!-- TODO: Add KeyAttribute to delay the appearance of @id/credits -->
 
